# agent-memory

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/orchestration/: registry.json  registry.json.bak
.github/workflows/: ci.yml
.memory-bank/: CONTEXT.md  MEMORY.md  REFERENCE.md  activeContext.md  agent-sessions.md  currentTask.md  dead-ends.md  decisions.graph.jsonl  progress.md  systemPatterns.md
.memory-bank/topics/: _index.md  agent-sessions.md  code-map.md  session-handoffs.md
docs/plans/: 2026-07-12-001-fix-memory-ingestion-integrity-plan.md
docs/systemd/: agent-memory-semwatch.service  install-semwatch.sh
src/agent_memory/: __init__.py  __main__.py  cli.py
src/agent_memory/features/bank/: command.py  templates.py
src/agent_memory/features/compact/: command.py
src/agent_memory/features/coord/: command.py
src/agent_memory/features/doctor/: __init__.py  command.py
src/agent_memory/features/entries/: command.py
src/agent_memory/features/graph/: command.py
src/agent_memory/hooks/: __init__.py  budget_guard.py  decision_tracker.py  recuerda_auto_append.py
src/agent_memory/shared/: __init__.py  config.py  entries.py  graph.py  ollama.py  paths.py  task_lines.py  text.py
tests/: conftest.py  test_archive_topic.py  test_auto_maintain.py  test_bank_status.py  test_budget_guard.py  test_chunking.py  test_cli.py  test_cloud_fallback.py  test_compact.py  test_compact_archive.py  test_coord.py  test_decision_tracker.py  test_doctor.py  test_entries.py  test_graph.py  test_hybrid.py  test_maintain.py  test_maintain_audit.py  test_ollama.py  test_paths.py  test_read_memory.py  test_recuerda_auto_append.py  test_semantic_command.py  test_semantic_mock.py  test_smoke.py  test_task_lines.py  test_text.py  test_watch.py
(+11 files in other folders)
