[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agent-memory-cli"
version = "0.1.0"
description = "Persistent per-project memory (.memory-bank/) for LLM coding agents — semantic recall, decision graph, maintenance."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "heldigard" }]
keywords = ["memory-bank", "llm-agents", "context", "embeddings", "recall", "claude-code", "codex"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Text Processing :: Indexing",
]
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.10"]

[project.scripts]
agent-memory = "agent_memory.cli:main"

[project.urls]
Homepage = "https://github.com/heldigard/agent-memory"
Repository = "https://github.com/heldigard/agent-memory"
Issues = "https://github.com/heldigard/agent-memory/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_memory"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
disable_error_code = ["no-any-return", "no-untyped-def", "type-arg"]
files = ["src/agent_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
